fixes issue -671 (#721)
* form got out from div. somehow, button not working inside div (prob. padding?)

* added css classes for button div

* added "field is too long" message key

* added maxlength control for description field and decreased rows size of textarea

--- a/src/js/controllers/contacts/contact/new_contact/new_contact.scss
+++ b/src/js/controllers/contacts/contact/new_contact/new_contact.scss
@@ -1,5 +1,5 @@
 .contact_form{
-  padding: 0 20px 40px;
+  padding: 0 20px;
 
   input{
     max-width: 100%;
@@ -9,4 +9,8 @@
   label{
     margin-top: 15px;
   }
+}
+
+.contact_form_button_div {
+  padding: 0 20px 10px;
 }
